parser/src/snapshots/rustpython_parser__parser__tests__parse_bool_op_or.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
Located {
    location: Location {
        row: 1,
        column: 0,
    },
    end_location: Some(
        Location {
            row: 1,
            column: 6,
        },
    ),
    custom: (),
    node: BoolOp(
        ExprBoolOp {
            op: Or,
            values: [
                Located {
                    location: Location {
                        row: 1,
                        column: 0,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 1,
                        },
                    ),
                    custom: (),
                    node: Name(
                        ExprName {
                            id: "x",
                            ctx: Load,
                        },
                    ),
                },
                Located {
                    location: Location {
                        row: 1,
                        column: 5,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 6,
                        },
                    ),
                    custom: (),
                    node: Name(
                        ExprName {
                            id: "y",
                            ctx: Load,
                        },
                    ),
                },
            ],
        },
    ),
}
