parser/src/snapshots/rustpython_parser__parser__tests__parse_boolop_and.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    location: Location {
        row: 1,
        column: 0,
    },
    end_location: Some(
        Location {
            row: 1,
            column: 7,
        },
    ),
    custom: (),
    node: BoolOp {
        op: And,
        values: [
            Located {
                location: Location {
                    row: 1,
                    column: 0,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 1,
                    },
                ),
                custom: (),
                node: Name {
                    id: "x",
                    ctx: Load,
                },
            },
            Located {
                location: Location {
                    row: 1,
                    column: 6,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 7,
                    },
                ),
                custom: (),
                node: Name {
                    id: "y",
                    ctx: Load,
                },
            },
        ],
    },
}
