parser/src/snapshots/rustpython_parser__parser__tests__parse_class.snap
---
source: parser/src/parser.rs
expression: "parse_program(source, \"<test>\").unwrap()"
---
[
    Located {
        range: 0..98,
        custom: (),
        node: ClassDef(
            StmtClassDef {
                name: "Foo",
                bases: [
                    Located {
                        range: 10..11,
                        custom: (),
                        node: Name(
                            ExprName {
                                id: "A",
                                ctx: Load,
                            },
                        ),
                    },
                    Located {
                        range: 13..14,
                        custom: (),
                        node: Name(
                            ExprName {
                                id: "B",
                                ctx: Load,
                            },
                        ),
                    },
                ],
                keywords: [],
                body: [
                    Located {
                        range: 18..44,
                        custom: (),
                        node: FunctionDef(
                            StmtFunctionDef {
                                name: "__init__",
                                args: Arguments {
                                    posonlyargs: [],
                                    args: [
                                        Located {
                                            range: 31..35,
                                            custom: (),
                                            node: ArgData {
                                                arg: "self",
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                    ],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kw_defaults: [],
                                    kwarg: None,
                                    defaults: [],
                                },
                                body: [
                                    Located {
                                        range: 40..44,
                                        custom: (),
                                        node: Pass,
                                    },
                                ],
                                decorator_list: [],
                                returns: None,
                                type_comment: None,
                            },
                        ),
                    },
                    Located {
                        range: 46..98,
                        custom: (),
                        node: FunctionDef(
                            StmtFunctionDef {
                                name: "method_with_default",
                                args: Arguments {
                                    posonlyargs: [],
                                    args: [
                                        Located {
                                            range: 70..74,
                                            custom: (),
                                            node: ArgData {
                                                arg: "self",
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                        Located {
                                            range: 76..79,
                                            custom: (),
                                            node: ArgData {
                                                arg: "arg",
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                    ],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kw_defaults: [],
                                    kwarg: None,
                                    defaults: [
                                        Located {
                                            range: 80..89,
                                            custom: (),
                                            node: Constant(
                                                ExprConstant {
                                                    value: Str(
                                                        "default",
                                                    ),
                                                    kind: None,
                                                },
                                            ),
                                        },
                                    ],
                                },
                                body: [
                                    Located {
                                        range: 94..98,
                                        custom: (),
                                        node: Pass,
                                    },
                                ],
                                decorator_list: [],
                                returns: None,
                                type_comment: None,
                            },
                        ),
                    },
                ],
                decorator_list: [],
            },
        ),
    },
]
