parser/src/snapshots/rustpython_parser__parser__tests__parse_class_generic_types.snap
---
source: parser/src/parser.rs
expression: "ast::Suite::parse(source, \"<test>\").unwrap()"
---
[
    ClassDef(
        StmtClassDef {
            range: 10..29,
            name: Identifier(
                "Foo",
            ),
            bases: [],
            keywords: [],
            body: [
                Expr(
                    StmtExpr {
                        range: 26..29,
                        value: Constant(
                            ExprConstant {
                                range: 26..29,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            decorator_list: [],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 20..21,
                        name: Identifier(
                            "T",
                        ),
                        bound: None,
                    },
                ),
            ],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 52..76,
            name: Identifier(
                "Foo",
            ),
            bases: [],
            keywords: [],
            body: [
                Expr(
                    StmtExpr {
                        range: 73..76,
                        value: Constant(
                            ExprConstant {
                                range: 73..76,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            decorator_list: [],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 62..68,
                        name: Identifier(
                            "T",
                        ),
                        bound: Some(
                            Name(
                                ExprName {
                                    range: 65..68,
                                    id: Identifier(
                                        "str",
                                    ),
                                    ctx: Load,
                                },
                            ),
                        ),
                    },
                ),
            ],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 105..138,
            name: Identifier(
                "Foo",
            ),
            bases: [],
            keywords: [],
            body: [
                Expr(
                    StmtExpr {
                        range: 135..138,
                        value: Constant(
                            ExprConstant {
                                range: 135..138,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            decorator_list: [],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 115..130,
                        name: Identifier(
                            "T",
                        ),
                        bound: Some(
                            Tuple(
                                ExprTuple {
                                    range: 118..130,
                                    elts: [
                                        Name(
                                            ExprName {
                                                range: 119..122,
                                                id: Identifier(
                                                    "str",
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                range: 124..129,
                                                id: Identifier(
                                                    "bytes",
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                },
                            ),
                        ),
                    },
                ),
            ],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 159..181,
            name: Identifier(
                "Foo",
            ),
            bases: [],
            keywords: [],
            body: [
                Expr(
                    StmtExpr {
                        range: 178..181,
                        value: Constant(
                            ExprConstant {
                                range: 178..181,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            decorator_list: [],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 169..170,
                        name: Identifier(
                            "T",
                        ),
                        bound: None,
                    },
                ),
                TypeVar(
                    TypeParamTypeVar {
                        range: 172..173,
                        name: Identifier(
                            "U",
                        ),
                        bound: None,
                    },
                ),
            ],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 200..223,
            name: Identifier(
                "Foo",
            ),
            bases: [],
            keywords: [],
            body: [
                Expr(
                    StmtExpr {
                        range: 220..223,
                        value: Constant(
                            ExprConstant {
                                range: 220..223,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            decorator_list: [],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 210..211,
                        name: Identifier(
                            "T",
                        ),
                        bound: None,
                    },
                ),
                TypeVar(
                    TypeParamTypeVar {
                        range: 213..214,
                        name: Identifier(
                            "U",
                        ),
                        bound: None,
                    },
                ),
            ],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 240..261,
            name: Identifier(
                "Foo",
            ),
            bases: [],
            keywords: [],
            body: [
                Expr(
                    StmtExpr {
                        range: 258..261,
                        value: Constant(
                            ExprConstant {
                                range: 258..261,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            decorator_list: [],
            type_params: [
                TypeVarTuple(
                    TypeParamTypeVarTuple {
                        range: 250..253,
                        name: Identifier(
                            "Ts",
                        ),
                    },
                ),
            ],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 275..296,
            name: Identifier(
                "Foo",
            ),
            bases: [],
            keywords: [],
            body: [
                Expr(
                    StmtExpr {
                        range: 293..296,
                        value: Constant(
                            ExprConstant {
                                range: 293..296,
                                value: Ellipsis,
                                kind: None,
                            },
                        ),
                    },
                ),
            ],
            decorator_list: [],
            type_params: [
                ParamSpec(
                    TypeParamParamSpec {
                        range: 285..288,
                        name: Identifier(
                            "P",
                        ),
                    },
                ),
            ],
        },
    ),
    ClassDef(
        StmtClassDef {
            range: 312..351,
            name: Identifier(
                "Foo",
            ),
            bases: [],
            keywords: [],
            body: [
                Pass(
                    StmtPass {
                        range: 347..351,
                    },
                ),
            ],
            decorator_list: [],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 322..323,
                        name: Identifier(
                            "X",
                        ),
                        bound: None,
                    },
                ),
                TypeVar(
                    TypeParamTypeVar {
                        range: 325..331,
                        name: Identifier(
                            "Y",
                        ),
                        bound: Some(
                            Name(
                                ExprName {
                                    range: 328..331,
                                    id: Identifier(
                                        "str",
                                    ),
                                    ctx: Load,
                                },
                            ),
                        ),
                    },
                ),
                TypeVarTuple(
                    TypeParamTypeVarTuple {
                        range: 333..335,
                        name: Identifier(
                            "U",
                        ),
                    },
                ),
                ParamSpec(
                    TypeParamParamSpec {
                        range: 337..340,
                        name: Identifier(
                            "P",
                        ),
                    },
                ),
            ],
        },
    ),
]
