parser/src/snapshots/rustpython_parser__parser__tests__parse_class_with_all_possible_generic_types.snap
---
source: parser/src/parser.rs
expression: "ast::Suite::parse(source, \"<test>\").unwrap()"
---
[
    ClassDef(
        StmtClassDef {
            range: 0..43,
            name: Identifier(
                "Foo",
            ),
            bases: [
                Name(
                    ExprName {
                        range: 30..31,
                        id: Identifier(
                            "A",
                        ),
                        ctx: Load,
                    },
                ),
                Name(
                    ExprName {
                        range: 33..34,
                        id: Identifier(
                            "B",
                        ),
                        ctx: Load,
                    },
                ),
            ],
            keywords: [],
            body: [
                Pass(
                    StmtPass {
                        range: 39..43,
                    },
                ),
            ],
            decorator_list: [],
            type_params: [
                TypeVar(
                    TypeParamTypeVar {
                        range: 10..11,
                        name: Identifier(
                            "X",
                        ),
                        bound: None,
                    },
                ),
                TypeVar(
                    TypeParamTypeVar {
                        range: 13..19,
                        name: Identifier(
                            "Y",
                        ),
                        bound: Some(
                            Name(
                                ExprName {
                                    range: 16..19,
                                    id: Identifier(
                                        "str",
                                    ),
                                    ctx: Load,
                                },
                            ),
                        ),
                    },
                ),
                TypeVarTuple(
                    TypeParamTypeVarTuple {
                        range: 21..23,
                        name: Identifier(
                            "U",
                        ),
                    },
                ),
                ParamSpec(
                    TypeParamParamSpec {
                        range: 25..28,
                        name: Identifier(
                            "P",
                        ),
                    },
                ),
            ],
        },
    ),
]
