parser/src/snapshots/rustpython_parser__parser__tests__parse_class_with_generic_param_spec.snap
---
source: parser/src/parser.rs
expression: "ast::Suite::parse(source, \"<test>\").unwrap()"
---
[
    ClassDef(
        StmtClassDef {
            range: 0..28,
            name: Identifier(
                "Foo",
            ),
            bases: [
                Name(
                    ExprName {
                        range: 15..16,
                        id: Identifier(
                            "A",
                        ),
                        ctx: Load,
                    },
                ),
                Name(
                    ExprName {
                        range: 18..19,
                        id: Identifier(
                            "B",
                        ),
                        ctx: Load,
                    },
                ),
            ],
            keywords: [],
            body: [
                Pass(
                    StmtPass {
                        range: 24..28,
                    },
                ),
            ],
            decorator_list: [],
            type_params: [
                ParamSpec(
                    TypeParamParamSpec {
                        range: 10..13,
                        name: Identifier(
                            "P",
                        ),
                    },
                ),
            ],
        },
    ),
]
